# CHANGES TO MTurkR 0.7 #

## SIGNIFICANT USER-VISIBLE CHANGES ##

* The deprecated argument `print`, which was removed in v0.5, has been fully removed. Use `verbose` instead. (#97)
* `MTurkR.Wizard` has been removed from MTurkR and has been recreated as a separate package. (#95)
* `HITStatus` now reports condensed column names better suited for narrow displays.
* Correctly handle multiple `response.group` arguments passed to HIT-related functions. (#89)
* `authenticate`, which was deprecated in v0.5, is removed.
* Use of RCurl has been replaced by curl. This necessitated a new dependency, base64enc. (#86)
* In lieu of `credentials`, AWS credentials should be specified via environment variables `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`. `credentials` will be deprecated.
* `SufficientFunds()` reflects the new commission structure effective July 21, 2015. (#87)
* `BulkCreateFromTemplate` and `BulkCreateFromURLs` now have a `frame.height` argument with a default of 450.

## DOCUMENTATION ##

* The package now includes additional HTMLQuestion templates including examples for image categorization and sentiment rating. (#94)
* Documentation for `GenerateHITReviewPolicy` and `GenerateAssignmentReviewPolicy` was expanded and tested, and a related HTMLQuestion HIT template is now installed.

## BUG FIXES ##

* When ttk widgets were added to the graphical wizard in v0.6, scrollbar calls retained tk-only options. Those have been removed. (h/t Justin Koch)
* State-level locales are now correctly supported in QualificationRequirements, including in complex combinations with country locales with no subdivision (so mixing U.S. states with other countries is possible). This feature was added in v0.6.5 but had a critical bug. (h/t Ricky Bilakhia)
* Closing the graphical wizard crashed RStudio due to `bringToTop(-1)`. This is fixed. (h/t Carolina Kuepper-Tetzel)


# CHANGES TO MTurkR 0.6.5 #

## SIGNIFICANT USER-VISIBILE CHANGES ##
