@@ -1,2 +1,0 @@
-APIReference <- function()
-    browseURL("http://docs.amazonwebservices.com/AWSMechTurk/latest/AWSMturkAPI/Welcome.html")
